Bug 153037 - font size +/- actions don't work as expected
Summary: font size +/- actions don't work as expected
Status: RESOLVED FIXED
Alias: None
Product: konqueror
Classification: Applications
Component: khtml (other bugs)
Version First Reported In: 4.0
Platform: Compiled Sources Linux
: NOR grave
Target Milestone: ---
Assignee: Konqueror Bugs
URL:
Keywords:
: 153052 153212 (view as bug list)
Depends on:
Blocks:
 
Reported: 2007-11-28 09:08 UTC by Germain Garand
Modified: 2007-12-08 17:38 UTC (History)
2 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Germain Garand 2007-11-28 09:08:34 UTC
Version:            (using KDE Devel)
Installed from:    Compiled sources

font size +/- actions are currently wired to zoom in/out, which is incorrect and unexpected.

Besides, the zoom mode does not work correctly.
Comment 1 Maksim Orlovich 2007-11-28 16:28:22 UTC
*** Bug 153052 has been marked as a duplicate of this bug. ***
Comment 2 FiNeX 2007-12-01 18:34:43 UTC
Yes, at least the labels and descriptions should be updated even if we are in string freeze!
Comment 3 Maksim Orlovich 2007-12-01 18:54:09 UTC
*** Bug 153212 has been marked as a duplicate of this bug. ***
Comment 4 Germain Garand 2007-12-08 17:38:30 UTC
SVN commit 746299 by ggarand:

- complete the separation of zooming from font-size increase/decrease.
- rewire font increase/decrease action to the correct effect.
- disable zooming to size < 100% for now.

showstopper
BUG: 153037


 M  +2 -2      khtml_ext.cpp  
 M  +55 -4     khtml_part.cpp  
 M  +9 -0      khtml_part.h  


WebSVN link: http://websvn.kde.org/?view=rev&revision=746299