- complete the separation of zooming from font-size increase/decrease. - rewire font increase/decrease action to the correct effect. - disable zooming to size < 100% for now.

showstopper
BUG: 153037

svn path=/trunk/KDE/kdelibs/; revision=746299